# BastaSpring2019Samples

./: README.md
01_HelloWorld/: compile.sh  index.js  index.wasm
02_CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  app.html  cmake_install.cmake  compile.sh
02_CMake/src/: main.cpp
03_Angular/client/: package-lock.json  package.json  tsconfig.json
03_Angular/client/e2e/src/: app.po.ts
03_Angular/client/src/: index.html
03_Angular/client/src/assets/fibonacci/: compile.sh  fibonacci.js  fibonacci.wasm
03_Angular/client/src/modules/app/: app.module.ts  app.routes.ts
03_Angular/client/src/modules/app/components/: index.ts
03_Angular/client/src/modules/app/services/: blur.service.ts  (+1 more)
03_Angular/client/src/modules/graphic/: graphic.module.ts  graphic.routes.ts
03_Angular/client/src/modules/shared/: shared.modules.ts
03_Angular/client/src/wasm/graphic/: compile.sh  graphic.js  graphic.wasm  owl.c
04_Angular/client/: package-lock.json  package.json
04_Angular/client/src/: main.ts  polyfills.ts  tsconfig.spec.json  typings.d.ts
04_Angular/client/src/assets/fibonacci/: compile.sh
04_Angular/client/src/environments/: environment.prod.ts  environment.ts
04_Angular/client/src/modules/3d-cube/: 3d-cube.module.ts  3d-cube.routes.ts
04_Angular/client/src/modules/app/: app.routes.ts
04_Angular/client/src/modules/ui/: ui.module.ts
04_Angular/client/src/wasm/3d-cube/: 3d-cube.c  3d-cube.js  3d-cube.wasm  compile.sh
04_Angular/client/src/wasm/graphic/: compile.sh  graphic.js  graphic.wasm
05_Rotating_Cube/: 3d-cube.c  compile.sh
(+36 files in other folders)
